--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -8,6 +8,7 @@
     "dev": "storybook dev -p 6006",
     "build": "storybook build",
     "build-vite": "tsc && vite build",
+    "deploy-storybook": "storybook-to-ghpages",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "@storybook/blocks": "^7.6.17",
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/test": "^7.6.17",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
