--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/react",
+  "name": "@newton-ignite-ui/react",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -14,9 +14,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@newton-ignite-ui/eslint-config": "*",
+    "@newton-ignite-ui/tokens": "*",
+    "@newton-ignite-ui/ts-config": "*",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "react": "^18.2.0",
